@@ -67,4 +67,14 @@
   <binary>bbchess</binary>
 </ai>
 
+<ai type="uci">
+   <name>Fruit</name>
+   <binary>fruit</binary>
+</ai>
+
+<ai type="cecp">
+   <name>Amundsen</name>
+   <binary>amundsen</binary>
+</ai>
+
 </aiconfig>
