@@ -1,6 +1,11 @@
 ------------------------------------------------------------------------------
 CHANGELOG
 ------------------------------------------------------------------------------
+2006-12-07  Robert Ancell  <bob27@users.sourceforge.net>
+	* Added Fruit and Amundsen engines to autodetect list.
+	* Tell UCI engines they have 5 mins to play to cause them to take time
+	  choosing moves.
+
 2006-12-01  Robert Ancell  <bob27@users.sourceforge.net>
 	* Added configuration module that uses GConf when available
 
